force-app/main/default/objects/Equipment_Line_Item__c/Equipment_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the status of each equipment/device.</description>
    <label>Equipment Line Item</label>
    <nameField>
        <displayFormat>Equipment- {0000}</displayFormat>
        <label>Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>