force-app/main/default/objects/Equipment_Line_Item__c/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <label>Equipment Name</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Equipment Line Items</relationshipLabel>
    <relationshipName>Equipment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>