force-app/main/default/objects/Equipment_Line_Item__c/fields/Equipment_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Utilized</label>
    <type>Checkbox</type>
</CustomField>