force-app/main/default/objects/Equipment_Line_Item__c/fields/Is_Under_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Is_Under_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Under Maintenance</label>
    <type>Checkbox</type>
</CustomField>