force-app/main/default/objects/Equipment_Line_Item__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room No.</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Equipment Line Items</relationshipLabel>
    <relationshipName>Equipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>